updated README, database schema

--- a/config_template.json
+++ b/config_template.json
@@ -2,8 +2,9 @@
   "port": 3000,
 
   "databases": {
-    "business": {
+    "customer_manager": {
       "host": "",
+      "port": 3306,
       "user": "",
       "password": ""
     }
